Bug 325512 - Contacts List crashes when right clicking on contact
Summary: Contacts List crashes when right clicking on contact
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.6.80
Platform: Ubuntu Linux
: NOR crash
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-10-01 17:52 UTC by Michał Zając
Modified: 2013-10-02 19:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michał Zając 2013-10-01 17:52:06 UTC
Application: ktp-contactlist (0.6.80)
KDE Platform Version: 4.11.1
Qt Version: 4.8.4
Operating System: Linux 3.8.0-31-generic x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
Whenever I right click on a contact in contacts list it immediately crashes.
I'm using nightly PPA for Ubuntu

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Telepathy Contact List (ktp-contactlist), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f6471c4a7c0 (LWP 8856))]

Thread 12 (Thread 0x7f6454ed3700 (LWP 8861)):
#0  0x00007f646d8f10d4 in pthread_mutex_unlock (mutex=0x12904f0) at forward.c:194
#1  0x00007f6469d545f1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f6469d150f1 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f6469d15304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f6454edaa1d in ?? () from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#5  0x00007f6469d38eb5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f646a3eaf8e in start_thread (arg=0x7f6454ed3700) at pthread_create.c:311
#7  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 11 (Thread 0x7f644ffff700 (LWP 8862)):
#0  0x00007f646d8d63cd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f6469d151dc in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f6469d156ba in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f64560fb4f6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f6469d38eb5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f646a3eaf8e in start_thread (arg=0x7f644ffff700) at pthread_create.c:311
#6  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 10 (Thread 0x7f6457933700 (LWP 8869)):
#0  __GI___pthread_getspecific (key=3) at pthread_getspecific.c:31
#1  0x00007f6469d39390 in g_thread_self () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f6469d1433e in g_main_context_acquire () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f6469d150b4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f6469d15304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f646f443036 in QEventDispatcherGlib::processEvents (this=0x7f64500013c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007f646f41338f in QEventLoop::processEvents (this=this@entry=0x7f6457932d90, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f646f413618 in QEventLoop::exec (this=this@entry=0x7f6457932d90, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007f646f315410 in QThread::exec (this=this@entry=0x16fa500) at thread/qthread.cpp:542
#9  0x00007f646f3f4edf in QInotifyFileSystemWatcherEngine::run (this=0x16fa500) at io/qfilesystemwatcher_inotify.cpp:256
#10 0x00007f646f317bec in QThreadPrivate::start (arg=0x16fa500) at thread/qthread_unix.cpp:338
#11 0x00007f646a3eaf8e in start_thread (arg=0x7f6457933700) at pthread_create.c:311
#12 0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 9 (Thread 0x7f63d77fe700 (LWP 8953)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f646f31814b in wait (time=18446744073709551615, this=0x17157e0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x1663708, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f646a6acc32 in Soprano::Util::AsyncQuery::Private::run() () from /usr/lib/libsoprano.so.4
#4  0x00007f646f317bec in QThreadPrivate::start (arg=0x16636d0) at thread/qthread_unix.cpp:338
#5  0x00007f646a3eaf8e in start_thread (arg=0x7f63d77fe700) at pthread_create.c:311
#6  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 8 (Thread 0x7f63d6ffd700 (LWP 8954)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f646f31814b in wait (time=18446744073709551615, this=0x16c0b40) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x16a0b48, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f646a6acc32 in Soprano::Util::AsyncQuery::Private::run() () from /usr/lib/libsoprano.so.4
#4  0x00007f646f317bec in QThreadPrivate::start (arg=0x16a0b10) at thread/qthread_unix.cpp:338
#5  0x00007f646a3eaf8e in start_thread (arg=0x7f63d6ffd700) at pthread_create.c:311
#6  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 7 (Thread 0x7f644c853700 (LWP 8979)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f646f31814b in wait (time=18446744073709551615, this=0x165a1b0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x1625b28, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f646a6acc32 in Soprano::Util::AsyncQuery::Private::run() () from /usr/lib/libsoprano.so.4
#4  0x00007f646f317bec in QThreadPrivate::start (arg=0x1625af0) at thread/qthread_unix.cpp:338
#5  0x00007f646a3eaf8e in start_thread (arg=0x7f644c853700) at pthread_create.c:311
#6  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 6 (Thread 0x7f63c1ff3700 (LWP 8996)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f646f31814b in wait (time=18446744073709551615, this=0x16346a0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x160d598, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f646a6acc32 in Soprano::Util::AsyncQuery::Private::run() () from /usr/lib/libsoprano.so.4
#4  0x00007f646f317bec in QThreadPrivate::start (arg=0x160d560) at thread/qthread_unix.cpp:338
#5  0x00007f646a3eaf8e in start_thread (arg=0x7f63c1ff3700) at pthread_create.c:311
#6  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 5 (Thread 0x7f63befed700 (LWP 9011)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f646f31814b in wait (time=18446744073709551615, this=0x160eb60) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x1666c78, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f646a6acc32 in Soprano::Util::AsyncQuery::Private::run() () from /usr/lib/libsoprano.so.4
#4  0x00007f646f317bec in QThreadPrivate::start (arg=0x1666c40) at thread/qthread_unix.cpp:338
#5  0x00007f646a3eaf8e in start_thread (arg=0x7f63befed700) at pthread_create.c:311
#6  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 4 (Thread 0x7f63bdfeb700 (LWP 9017)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f646f31814b in wait (time=18446744073709551615, this=0x1b332f0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x1697318, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f646a6acc32 in Soprano::Util::AsyncQuery::Private::run() () from /usr/lib/libsoprano.so.4
#4  0x00007f646f317bec in QThreadPrivate::start (arg=0x16972e0) at thread/qthread_unix.cpp:338
#5  0x00007f646a3eaf8e in start_thread (arg=0x7f63bdfeb700) at pthread_create.c:311
#6  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f643bfff700 (LWP 9025)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f646f31814b in wait (time=18446744073709551615, this=0x1634c50) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x19347e8, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f646a6acc32 in Soprano::Util::AsyncQuery::Private::run() () from /usr/lib/libsoprano.so.4
#4  0x00007f646f317bec in QThreadPrivate::start (arg=0x19347b0) at thread/qthread_unix.cpp:338
#5  0x00007f646a3eaf8e in start_thread (arg=0x7f643bfff700) at pthread_create.c:311
#6  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f63bb7e6700 (LWP 9028)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f646f31814b in wait (time=18446744073709551615, this=0x16c0ea0) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=<optimized out>, mutex=0x16cf068, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f646a6acc32 in Soprano::Util::AsyncQuery::Private::run() () from /usr/lib/libsoprano.so.4
#4  0x00007f646f317bec in QThreadPrivate::start (arg=0x16cf030) at thread/qthread_unix.cpp:338
#5  0x00007f646a3eaf8e in start_thread (arg=0x7f63bb7e6700) at pthread_create.c:311
#6  0x00007f646d8e2e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f6471c4a7c0 (LWP 8856)):
[KCrash Handler]
#6  0x00007f646f9bac5c in KPeople::PersonPluginManager::actionsForPerson(QSharedPointer<KPeople::PersonData>, QObject*) () from /usr/lib/libkpeople.so.1
#7  0x000000000042b2fb in ContextMenu::contactContextMenu (this=0x1229800, index=...) at /build/buildd/ktp-contact-list-0.99.0+git20131001+r710/context-menu.cpp:106
#8  0x0000000000437431 in MainWidget::onCustomContextMenuRequested (this=0xefad90, pos=...) at /build/buildd/ktp-contact-list-0.99.0+git20131001+r710/main-widget.cpp:232
#9  0x00007f646f4290ef in QMetaObject::activate (sender=sender@entry=0xf50160, m=m@entry=0x7f646eb239c0 <QWidget::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff9f4b8e30) at kernel/qobject.cpp:3539
#10 0x00007f646e0c1ee2 in QWidget::customContextMenuRequested (this=this@entry=0xf50160, _t1=...) at .moc/release-shared/moc_qwidget.cpp:374
#11 0x00007f646e0cd0df in QWidget::event (this=this@entry=0xf50160, event=event@entry=0x7fff9f4b9950) at kernel/qwidget.cpp:8556
#12 0x00007f646e47f486 in QFrame::event (this=0xf50160, e=0x7fff9f4b9950) at widgets/qframe.cpp:557
#13 0x00007f646e595a2b in QAbstractItemView::viewportEvent (this=this@entry=0xf50160, event=event@entry=0x7fff9f4b9950) at itemviews/qabstractitemview.cpp:1644
#14 0x00007f646e5d56d1 in QTreeView::viewportEvent (this=0xf50160, event=0x7fff9f4b9950) at itemviews/qtreeview.cpp:1257
#15 0x00007f646f4147a6 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=this@entry=0xd88900, receiver=receiver@entry=0xf48df0, event=event@entry=0x7fff9f4b9950) at kernel/qcoreapplication.cpp:1056
#16 0x00007f646e07f8bc in QApplicationPrivate::notify_helper (this=this@entry=0xd88900, receiver=receiver@entry=0xf48df0, e=e@entry=0x7fff9f4b9950) at kernel/qapplication.cpp:4563
#17 0x00007f646e082735 in QApplication::notify (this=this@entry=0x7fff9f4ba590, receiver=receiver@entry=0xf48df0, e=e@entry=0x7fff9f4b9950) at kernel/qapplication.cpp:4189
#18 0x00007f6470d7b916 in KApplication::notify (this=0x7fff9f4ba590, receiver=0xf48df0, event=0x7fff9f4b9950) at ../../kdeui/kernel/kapplication.cpp:311
#19 0x00007f646f41463e in QCoreApplication::notifyInternal (this=0x7fff9f4ba590, receiver=receiver@entry=0xf48df0, event=event@entry=0x7fff9f4b9950) at kernel/qcoreapplication.cpp:946
#20 0x00007f646e0faeb1 in sendSpontaneousEvent (event=0x7fff9f4b9950, receiver=0xf48df0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#21 QETWidget::translateMouseEvent (this=this@entry=0xf48df0, event=event@entry=0x7fff9f4ba0a0) at kernel/qapplication_x11.cpp:4636
#22 0x00007f646e0f9e81 in QApplication::x11ProcessEvent (this=0x7fff9f4ba590, event=event@entry=0x7fff9f4ba0a0) at kernel/qapplication_x11.cpp:3746
#23 0x00007f646e125042 in x11EventSourceDispatch (s=0xd4d070, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#24 0x00007f6469d14f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f6469d15248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f6469d15304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f646f443016 in QEventDispatcherGlib::processEvents (this=0xceddc0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#28 0x00007f646e12513e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#29 0x00007f646f41338f in QEventLoop::processEvents (this=this@entry=0x7fff9f4ba470, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007f646f413618 in QEventLoop::exec (this=this@entry=0x7fff9f4ba470, flags=...) at kernel/qeventloop.cpp:204
#31 0x00007f646f418cf6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#32 0x00007f646e07dffc in QApplication::exec () at kernel/qapplication.cpp:3828
#33 0x000000000041e091 in main (argc=1, argv=0x7fff9f4ba6d8) at /build/buildd/ktp-contact-list-0.99.0+git20131001+r710/main.cpp:63

Reported using DrKonqi
Comment 1 David Edmundson 2013-10-01 23:36:18 UTC
Mostly a packaging fail. 

libkpeople package is just missing a load of files, in particular a plugin we try to load. Will add a guard then poke packagers
Comment 2 David Edmundson 2013-10-02 19:24:49 UTC
Git commit 652fa100a29f9df28f825f9c1e556396234a04b7 by David Edmundson.
Committed on 02/10/2013 at 20:24.
Pushed by davidedmundson into branch 'master'.

Check plugin loaded correctly before adding to the list of plugins

This occured on broken installs where the .desktop file was installed
but the .so file was missing

M  +4    -1    src/personpluginmanager.cpp

http://commits.kde.org/libkpeople/652fa100a29f9df28f825f9c1e556396234a04b7