Check plugin loaded correctly before adding to the list of plugins

This occured on broken installs where the .desktop file was installed
but the .so file was missing

BUG: 325512